Linter: fix exec(String) deprecation since Java 18